/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */


plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
    id 'application'
	id 'java'
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    maven {
	    url 'https://m2.dv8tion.net/releases'
	    name 'm2-dv8tion'
  }
}

mainClassName = 'com.github.black0nion.blackonionbot.bot.Main'

jar {
    archiveBaseName = 'blackonion-bot'
    archiveVersion =  '1.8.7'
     manifest {
        attributes 'Main-Class': mainClassName
    }
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    // This dependency is exported to consumers, that is to say found on their compile classpath.
    api 'org.apache.commons:commons-math3:3.6.1'

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'com.google.guava:guava:28.2-jre'
    
    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
    
    implementation 'com.google.code.gson:gson:2.8.6'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
    
    compile 'net.dv8tion:JDA:4.2.1_253'
    
    compile 'com.jagrosh:jda-utilities:3.0.5'
    
    implementation 'com.sedmelluq:lavaplayer:1.3.50'
    
    compile "com.sparkjava:spark-core:2.9.3"
    
    compile group: 'org.json', name: 'json', version: '20201115'
    
    implementation 'net.java.dev.jna:jna-platform:5.6.0'
    
    implementation group: 'org.menudocs', name: 'paste-client-java', version: '1.0.16'
    
    //implementation 'com.github.HypixelDev.PublicAPI:Java:2.0.0'
    
    compile group: 'org.apache.logging.log4j', name: 'log4j', version: '2.8.2', ext: 'pom'
    
    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
    
    implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.8'

	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'

    implementation 'club.minnced:discord-webhooks:0.5.4-rc'
    
  	implementation 'com.sedmelluq:lavaplayer:1.3.67'
  	
  	compile "com.influxdb:influxdb-client-java:1.8.0"
  	
  	compile 'se.michaelthelin.spotify:spotify-web-api-java:1.5.0'
    
    implementation group: 'com.vdurmont', name: 'emoji-java', version: '5.1.1'
    
    implementation group: 'org.reflections', name: 'reflections', version: '0.9.12'
}
